# csv_reader_api

./: .gitignore  README.md  alembic.ini  pyproject.toml
data/: items.csv
migrations/: env.py
migrations/versions/: bc47ab0ef56a_create_items_table.py
scripts/: load_csv.py
src/csv_reader_api/: app.py  crud.py  database.py  models.py  schemas.py  settings.py
src/csv_reader_api/routers/: items.py
