[project]
name = "csv-reader-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Tayro",email = "96271669+YuriTayro@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.119.1,<0.120.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "csv_reader_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.taskipy.tasks]
run = "uvicorn src.csv_reader_api.app:app --reload-dir src"
